bin_PROGRAMS = supertux

supertux_SOURCES = \
addon.cpp \
badguy.cpp \
badguy.h \
bitmask.cpp \
bitmask.h \
button.cpp \
button.h \
collision.cpp \
collision.h \
configfile.cpp \
configfile.h \
intro.cpp \
intro.h \
defines.h \
gameloop.cpp \
gameloop.h \
globals.cpp \
globals.h \
file_system.cpp \
high_scores.cpp \
high_scores.h \
level.cpp \
level.h \
leveleditor.cpp \
leveleditor.h \
menu.cpp \
menu.h \
particlesystem.cpp \
particlesystem.h \
physic.cpp \
physic.h \
player.cpp \
player.h \
reader/physfs/ifile_stream.cpp \
reader/physfs/ifile_streambuf.cpp \
reader/physfs/ofile_stream.cpp \
reader/physfs/ofile_streambuf.cpp \
reader/physfs/physfs_sdl.cpp \
reader/reader_collection.cpp \
reader/reader_document.cpp \
reader/reader_iterator.cpp \
reader/reader_mapping.cpp \
reader/reader_object.cpp \
reader/writer.cpp \
scene.cpp \
scene.h \
screen.cpp \
screen.h \
setup.cpp \
setup.h \
sexp-cpp/src/float.cpp \
sexp-cpp/src/io.cpp \
sexp-cpp/src/lexer.cpp \
sexp-cpp/src/parser.cpp \
sexp-cpp/src/util.cpp \
sexp-cpp/src/value.cpp \
sound.cpp \
sound.h \
special.cpp \
special.h \
supertux.cpp \
text.cpp \
text.h \
texture.cpp \
texture.h \
timer.cpp \
timer.h \
title.cpp \
title.h \
type.cpp \
type.h \
world.cpp \
world.h \
worldmap.cpp \
worldmap.h \
tile.h \
tile.cpp \
mousecursor.cpp \
mousecursor.h \
resources.h \
resources.cpp \
gameobjs.h \
gameobjs.cpp \
sprite.h \
sprite.cpp \
sprite_manager.cpp \
sprite_manager.h \
music_manager.cpp \
music_manager.h \
musicref.cpp \
musicref.h

# EOF #
